@@ -8,8 +8,10 @@ omhacks (0.11-2) unstable; urgency=low
   * Also check error code when reading led status. There was no known bug
     about it, but it was an unchecked error code found during a code review
     for other unchecked error codes after #601321
+  * Use detected maximum brightness value instead of an arbitrary hardcoded
+    one
 
- -- Enrico Zini <enrico@debian.org>  Mon, 25 Oct 2010 22:28:57 +0200
+ -- Enrico Zini <enrico@debian.org>  Mon, 25 Oct 2010 22:53:13 +0200
 
 omhacks (0.11-1) unstable; urgency=low
 
